# ycolorpicker-qt5

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  color.cpp  color.h  color_formats.cpp  color_formats.h  colorpicker.h  component_spinners.cpp  component_spinners.h  currcolordisplay.cpp  currcolordisplay.h  hueslider.cpp  hueslider.h  main.cpp  mainwindow.cpp  mainwindow.h  palette.cpp  palette.h  push_button.cpp  push_button.h  resources.qrc  rgbsliders.cpp  rgbsliders.h  rgbspinners.cpp  rgbspinners.h  sample_button.cpp  sample_button.h  satval.cpp  satval.h  ycolorpicker.desktop
